<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('likes', function (Blueprint $table) {
            $table->id();
            $table->foreignId('user_id')->constrained()->cascadeOnDelete();

            // Polimórfico, para 'review', 'comment o 'post'
            $table->string('entity_type', 30);
            $table->unsignedBigInteger('entity_id');

            $table->timestamps();

            $table->unique(['user_id', 'entity_type', 'entity_id']); // un like por usuario y entidad
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('likes');
    }
};
